Issue IMCMS-814 Image editor text: - Fix bug with image index